Thu Jun 30 00:54:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_stop): change RDoc sample code. The old
	  example is buggy and may cause deadlock. The patch is
	  suggested by Heesob Park <phasis@gmail.com>. Thank you!
	  [Bug #3606][ruby-core:31454]

Thu Jun 30 00:49:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_wakeup): change RDoc sample code. The old
	  example is buggy and may not display anything by a race.
	  The patch is suggested by Heesob Parrk <phasis@gmail.com>.
	  Thank you! [Bug #3606][ruby-core:31454]

Thu Jun 30 00:43:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_run): change RDoc. The old example is buggy
	  and may cause deadlock. The patch is suggested by Heesob Park
	  <phasis@gmail.com>. Thank you! [Bug #3606][ruby-core:31454]

Thu Jun 30 00:30:15 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/cmath.rb: make same exception for Math. fix [Bug #3137].

Thu Jun 30 00:03:20 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/completion.rb: complate correctry string literal. fix
	  [Bug #1145].

Wed Jun 29 23:42:51 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: avoided using timev.
	* ext/date/date_strftime.c: ditto.
	* ext/date/date_tmx.h: ditto.

Wed Jun 29 23:17:57 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/openssl/ossl.h (OPENSSL_SYS_WIN32): support for mingw(msys).

Wed Jun 29 23:09:14 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tk/extconf.rb (intptr_t, uintptr_t): support for the latest ActiveTcl with mingw.

Wed Jun 29 22:49:10 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/cmd/help.rb: support RDoc 3.7. fix [Bug #3760].

Wed Jun 29 22:04:14 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/tracer.rb: Tracer.on only if required by -r command-line option.
	  and consider --disable-gems option.
	* test/test_tracer.rb: add tests for it.
